fix: dropdown opening behind sticky topic header

--- a/scss/topic.scss
+++ b/scss/topic.scss
@@ -40,10 +40,9 @@
 		margin-bottom: -5px;
 	}
 	.topic-header {
-		position: sticky;
 		top: var(--panel-offset);
 		background-color: $body-bg;
-		z-index: $zindex-sticky;
+		z-index: $zindex-dropdown;
 	}
 
 	.topic-info {
